--- a/Acme.CommonTest/Acme.CommonTest.csproj
+++ b/Acme.CommonTest/Acme.CommonTest.csproj
@@ -51,11 +51,16 @@
   <ItemGroup>
     <Compile Include="StringHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LoggingServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ACM.BL\ACM.BL.csproj">
+      <Project>{B2CF6AD8-A059-42B1-9875-28F273E1F702}</Project>
+      <Name>ACM.BL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Acme.Common\Acme.Common.csproj">
       <Project>{2cc41164-7829-4ed3-a2ee-835ef88d4a09}</Project>
       <Name>Acme.Common</Name>
